--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ temp/
 data/gas/ethylene_CO.txt
 data/gas/ethylene_methane.txt
 data/swat/SWaT_Dataset_Attack_v0.csv
+data/covid/data.csv
+heatmaps/
 .DS_Store
 Icon?
 ![iI]con[_a-zA-Z0-9]
